2008-Oct-27     cpo     Tag V00-03-00.  Add support for evg/evr/acqiris.
2008-Oct-21	weaver  Tag V00-02-02.  Minor fixes to event builder error handling and 
			network buffering.
2008-Oct-15	weaver  Tag V00-02-01.  Many fixes and changes for platform model.
2008-Oct-10	weaver  Tag V00-02-00.  Collection added platforms.  First commit
			of zero-copy event builders.  Also added zerocopy/tub as
			a buffer between pipes.
2008-Sep 24	weaver  Tag V00-01-00.  Many changes to event builders and levels.
2008-Sep-12	weaver	Initial import of utility, xtc, client, management code.
2008-Sep-09	weaver	Tag V00-00-00.  Initial import of service and collection code.