@@ -1,3 +1,5 @@
+2008-Oct-27     cpo     Tag V00-03-01.  Forgot to add AcqServer files and
+                        DmaEngine in utility.
 2008-Oct-27     cpo     Tag V00-03-00.  Add support for evg/evr/acqiris.
 2008-Oct-21	weaver  Tag V00-02-02.  Minor fixes to event builder error handling and 
 			network buffering.
